--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ openwebrx (1.2.2) bullseye jammy; urgency=low
   * Added configurable tuning step
   * Added support for panning on touch screens
   * Made OWRX tune to the CW frequency in the CW mode
+  * Improved APRS information display
 
  -- Marat Fayzullin <luarvique@gmail.com>  Fri, 23 Dec 2022 15:15:00 +0000
 
