--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,20 @@
+openwebrx (1.2.3) bullseye jammy; urgency=low
+
+  * Added configurable session timeout option, with a default page.
+  * Made multiple user interface improvements for touch screens.
+  * Made touch-and-drag panning more reliable.
+  * Added zoom in/out with the stretch/pinch gesture.
+  * Added buttons for precisely touch-tuning the frequency. 
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Thu, 12 Jan 2023 15:15:00 +0000
+
 openwebrx (1.2.2) bullseye jammy; urgency=low
 
-  * Added noise filter based on spectral subtraction
-  * Added configurable tuning step
-  * Added support for panning on touch screens
-  * Made OWRX tune to the CW frequency in the CW mode
-  * Improved APRS information display
+  * Added noise filter based on spectral subtraction.
+  * Added configurable tuning step.
+  * Added support for panning on touch screens.
+  * Made OWRX tune to the CW frequency in the CW mode.
+  * Improved APRS information display.
 
  -- Marat Fayzullin <luarvique@gmail.com>  Fri, 23 Dec 2022 15:15:00 +0000
 
