--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+openwebrx (1.2.6) bullseye jammy; urgency=low
+
+  * Added SSTV decoder with user interface.
+  * Added background SSTV decoding to /tmp folder.
+  * Extended CB band up to 28MHz, as used in some countries.
+  * Added SSTV and RTTY frequencies to the bands layout.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Sat, 18 Feb 2023 16:12:00 +0000
+
 openwebrx (1.2.5) bullseye jammy; urgency=low
 
   * Added RTTY decoder.
